# edubot_Group10

./: .gitmodules  README  README.md
Group 10 Files/: Forward_Kinematics.py  IK_with_limits  NumericalIK
ros_ws/: frames_2026-03-06_13.48.41.gv
ros_ws/src/controllers/config/: lerobot_params.yaml
ros_ws/src/controllers/src/: example_pos_traj.cpp
ros_ws/src/lerobot/: CMakeLists.txt  package.xml
ros_ws/src/lerobot/config/: robot_hw.yaml
ros_ws/src/lerobot/include/lerobot/: lerobot_hw.hpp  lerobot_read.hpp
ros_ws/src/lerobot/launch/: hw_read.launch.py  joint_slider.launch.py
ros_ws/src/lerobot/src/: lerobot_hw.cpp  lerobot_read.cpp
ros_ws/src/python_controllers/: setup.py
ros_ws/src/python_controllers/python_controllers/: Positions Hard-Coded  example_pos_traj.py  group_pos_traj.py  ik_pick_and_place.py  pick_and_place.py  pickup_traj.py  pickup_traj_vel_control.py  publish_traj.py  robot_ik.py  test_ik_pos.py
ros_ws/src/robot_core/src/: robot.cpp
